; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d.c_vita2d_swap_buffers.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d.c_vita2d_swap_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@displaySurface = common dso_local global i32* null, align 8
@backBufferIndex = common dso_local global i64 0, align 8
@displayBufferSync = common dso_local global i32* null, align 8
@displayBufferData = common dso_local global i32* null, align 8
@frontBufferIndex = common dso_local global i64 0, align 8
@DISPLAY_BUFFER_COUNT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vita2d_swap_buffers() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = load i32*, i32** @displaySurface, align 8
  %3 = load i64, i64* @backBufferIndex, align 8
  %4 = getelementptr inbounds i32, i32* %2, i64 %3
  %5 = load i32*, i32** @displayBufferSync, align 8
  %6 = load i64, i64* @backBufferIndex, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @sceGxmPadHeartbeat(i32* %4, i32 %8)
  %10 = load i32*, i32** @displayBufferData, align 8
  %11 = load i64, i64* @backBufferIndex, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = load i32*, i32** @displayBufferSync, align 8
  %16 = load i64, i64* @frontBufferIndex, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = load i32*, i32** @displayBufferSync, align 8
  %20 = load i64, i64* @backBufferIndex, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @sceGxmDisplayQueueAddEntry(i32 %18, i32 %22, %struct.TYPE_3__* %1)
  %24 = load i64, i64* @backBufferIndex, align 8
  store i64 %24, i64* @frontBufferIndex, align 8
  %25 = load i64, i64* @backBufferIndex, align 8
  %26 = add i64 %25, 1
  %27 = load i64, i64* @DISPLAY_BUFFER_COUNT, align 8
  %28 = urem i64 %26, %27
  store i64 %28, i64* @backBufferIndex, align 8
  ret void
}

declare dso_local i32 @sceGxmPadHeartbeat(i32*, i32) #1

declare dso_local i32 @sceGxmDisplayQueueAddEntry(i32, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
